data/derived/sp14/progs/unify/prog2219.ml.out
Characters 388-406:
  | FiboPlus (ex1,ex2,ex3,ex4,ex5) -> ((exprToString ex1)*(exprToString ex1+exprToString ex2)*(exprToString ex1+exprToString ex2+exprToString ex3)*(exprToString ex1+exprToString ex2+exprToString ex3+exprToString ex4)*(exprToString ex1+exprToString ex2+exprToString ex3+exprToString ex4+exprToString ex5));;
                                       ^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
